2004-06-14 20:41  Dossy Shiobara <dossy@panoptic.com>

	* nsd/return.c: unnecessary test for data != NULL actually caused
	  part of bug #971016 when fastpath.cache=false and
	  fastpath.mmap=true and the file requested is zero bytes, mmap()
	  returns 0 which gets passed along as data == NULL, causing
	  ReturnCharData() to not flush the queued headers.  removing the
	  if is safe as Ns_WriteConn will simply flush any queued data

2004-06-14 20:40  Dossy Shiobara <dossy@panoptic.com>

	* nsd/connio.c: If nsend == 0, we would never call Ns_WriteConn to
	  flush the queued headers.  This could happen when we're sending
	  zero bytes of data as a response.  This fixes bug #971016 in the
	  case where fastpath.cache=false and fastpath.mmap=false and a
	  zero byte file is requested.

2004-06-14 16:40  Dossy Shiobara <dossy@panoptic.com>

	* nsd/return.c: one-liner fix for sending Content-Length header
	  for content of zero bytes (Bug #971016)

2004-06-03  Rob Crittenden <rcrittenden0569@aol.com>

    * TAG aolserver_v40_r5

2004-06-03  Rob Crittenden <rcrittenden0569@aol.com>

	* Makefile: remove Makefile.module during distclean
	* include/ns.h, nsd/log.c: Allow users to override logging functions.
	* nsd/str.c: Fix crash bug in Ns_Trim* when trimming NULL strings.
	* nsd/: nsconf.c, driver.c, return.c, nsd.h: Add new bool config
	  option, keepaliveallmethods, which enables HTTP/1.0 Keep-Alives for
	  all valid methods. By default this is false.

2004-03-26  Mark Page  <mpagenva@aol.com>

	* nsd/nsd.h:
	* nsd/driver.c:
	* sample-config.tcl: Add configurable logging of errors which cause the
	driver to drop a incoming connection socket.  Logging goes to the
	server log.  Following new bool config params are added to the socket
	driver's section (e.g., nssock, etc): readtimeoutlogging,
	serverrejectlogging, sockerrorlogging,
	sockshuterrorlogging.
	
2004-02-27 14:14  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h: fix for bug #906011 "include/ns.h version not